<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Echo Music</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="size">Size</string>
    <string name="duration">Duration</string>
    <string name="clear">Clear</string>
    <string name="custom">Custom</string>
    <string name="_default">Default</string>
    <string name="clear_playlist">Clear songs</string>
    <string name="add_to_queue">Add to playing queue</string>
    <string name="activity_settings_action_bar_title">Settings</string>
    <string name="activity_searchable_action_bar_title">Echo Music - Search</string>
    <string name="fragment_np_md3_toolbar_title">Now Playing</string>
    <string name="bt_fav_text">Favourites</string>
    <string name="bt_add_playlist_text">Add playlist</string>
    <string name="bt_shuffle_all_text">Shuffle all</string>
    <string name="bt_play_all_text">Play all</string>
    <string name="bt_report_crash_text">REPORT</string>
    <string name="bt_close_crash_activity_text">EXIT</string>
    <string name="bt_copy_crash_log_text">Copy Crash Log</string>
    <string name="search_query_hint">Search for songs/artists</string>
    <string name="add_playlist_textinput_hint">Enter playlist name</string>
    <string name="add_playlist_dialog_title">Add new playlist</string>
    <string name="add_to_fav">Add to Favourites</string>
    <string name="choose_playlist_dialog_title">Choose playlist</string>
    <string name="layout_now_playing_queue_sheet_title">Now Playing Queue</string>
    <string name="add_playlist_dialog_empty_input_rationale">Please type a name for the playlist!</string>
    <string name="msg_app_crashed">Application accidentally crashed! 😟</string>
    <string name="msg_delete_playlist_rationale">Are you sure you want to delete %s? \nThis will not delete any song in the playlist.</string>
    <string name="msg_clear_playlist_rationale">Are you sure you want to clear %s? \nThis will not delete any song in the playlist.</string>
    <string name="msg_delete_playlist_success">Deleted %s</string>
    <string name="msg_rename_playlist_rationale">You are renaming %s. \nType the new name below.</string>
    <string name="msg_rename_playlist_success">Renamed %1$s to %2$s</string>
    <string name="msg_add_to_playlist_success">Added %1$s to %2$s</string>
    <string name="msg_add_songs_to_playlist_success">Added %d song(s) to %s</string>
    <string name="msg_remove_song_from_playlist_success">Removed %1$s from %2$s</string>
    <string name="msg_remove_song_from_queue_success">Removed %s from the queue</string>
    <string name="msg_add_to_playlist_exists">Song already exists!</string>
    <string name="msg_swap_song_position">Move item up or down to change it\'s position</string>
    <string name="msg_swap_item_position_help">Touch and hold this button to change song position</string>
    <string name="msg_add_songs_to_queue_success">Added %d song(s) to playing queue</string>
    <string name="msg_shuffle_on">Shuffle on</string>
    <string name="msg_shuffle_off">Shuffle off</string>
    <string name="msg_repeat_on">Repeat on</string>
    <string name="msg_repeat_off">Repeat off</string>
    <string name="msg_add_song_to_playing_queue_success">%s will be played as the next song</string>
    <string name="msg_add_songs_to_playing_queue">Do you want to add %d song(s) to the playing queue?</string>
    <string name="msg_select_song_to_play">Please select a song to play!</string>
    <string name="play_next">Play next</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="edit_metadata">Edit metadata</string>
    <string name="set_ringtone">Set as ringtone</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="tooltip_now_playing_queue">Now playing queue</string>
    <string name="tooltip_search_text">Search</string>
    <string name="tooltip_settings_text">Settings</string>
    <string name="tooltip_songs_text">All songs</string>
    <string name="tooltip_albums_text">Albums</string>
    <string name="tooltip_artists_text">Artists</string>
    <string name="tooltip_playlists_text">Playlists</string>
    <string name="tooltip_options_text">Options/Menu</string>
    <string name="tooltip_play_pause_song_text">Play/Pause song</string>
    <string name="tooltip_next_song_text">Next song</string>
    <string name="tooltip_previous_song_text">Previous song</string>
    <string name="tooltip_repeat_mode_text">Repeat song</string>
    <string name="tooltip_shuffle_mode_text">Shuffle songs</string>
    <string name="fragment_songs_title">Songs</string>
    <string name="fragment_albums_title">Albums</string>
    <string name="fragment_artists_title">Artists</string>
    <string name="fragment_playlists_title">Playlists</string>
    <string name="pref_item_general_title">General Preferences</string>
    <string name="pref_item_general_subtitle">Settings for Echo Music app</string>
    <string name="pref_category_ui">UI Mode</string>
    <string name="pref_mode_dark">Enable dark mode</string>
    <string name="mode_dark_on">Requires restart \nDark mode has been enabled</string>
    <string name="mode_dark_off">Requires restart \nDark mode has been disabled</string>
    <string name="delete_playlist_confirmation_dialog_title">Confirm deletion</string>
    <plurals name="playlist_songs_count">
        <item quantity="zero">0 songs found -</item>
        <item quantity="one">%d song found -</item>
        <item quantity="other">%d songs found -</item>
    </plurals>
    <plurals name="msg_clear_playlist_success">
        <item quantity="one">Successfully cleared %d song from %s</item>
        <item quantity="other">Successfully cleared %d songs from %s</item>
    </plurals>
    <string name="song_details">Name: %1$s \n \nPath: %2$s \n \nArtist: %3$s \n \nAlbum: %4$s \n \nDuration: %5$s</string>
</resources>