<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_songs_to_queue_menu_item"
        android:name="@string/add_to_queue"
        android:title="@string/add_to_queue"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/add_songs_to_playlist_menu_item"
        android:name="@string/add_to_playlist"
        android:title="@string/add_to_playlist"
        app:showAsAction="never" />

    <item
        android:name="@string/sort"
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_default"
                    android:title="@string/_default"
                    android:name="@string/_default"
                    android:checked="true" />
                <item
                    android:id="@+id/sort_asc"
                    android:title="@string/asc"
                    android:name="@string/asc" />
                <item
                    android:id="@+id/sort_desc"
                    android:title="@string/desc"
                    android:name="@string/desc" />
                <item
                    android:id="@+id/sort_size"
                    android:title="@string/size"
                    android:name="@string/size" />
                <item
                    android:id="@+id/sort_duration"
                    android:title="@string/duration"
                    android:name="@string/duration" />
            </group>
        </menu>
    </item>

</menu>