<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"/>

    </com.google.android.material.appbar.AppBarLayout>
    
    <androidx.core.widget.NestedScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/appbar"
        android:layout_above="@id/copy"
        android:fadeScrollbars="true"
        android:scrollbarDefaultDelayBeforeFade="1500"
        android:scrollbarSize="6dp"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/msg_app_crashed"
                android:textSize="24sp"
                android:textStyle="bold"/>
            
            <TextView
                android:id="@+id/crash_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="14sp"
                android:textIsSelectable="true"/>
            
        </LinearLayout>
    
    </androidx.core.widget.NestedScrollView>
    
    <Button
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:id="@+id/copy"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/actions_bar"
        android:layout_margin="8dp"
        android:text="@string/bt_copy_crash_log_text"
        app:icon="@drawable/ic_content_copy"/>
    
    <LinearLayout
        android:id="@+id/actions_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">
        
        <Button
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/bt_report_crash_text"
            android:layout_weight="1"
            app:icon="@drawable/ic_github"/>
        
        <Button
            style="@style/Widget.Material3.Button.TonalButton.Icon"
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/bt_close_crash_activity_text"
            android:layout_weight="1"
            app:icon="@drawable/ic_exit_to_app"/>
        
    </LinearLayout>
    
</RelativeLayout>
