<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:liftOnScroll="true"
        app:liftOnScrollColor="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:title="@string/fragment_playlists_title"
            app:layout_scrollFlags="scroll|enterAlways|snap" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/fav_bt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bt_fav_text"
                android:layout_weight="1"
                app:icon="@drawable/ic_heart"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon" />

            <Button
                android:id="@+id/add_playlist_bt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bt_add_playlist_text"
                android:layout_weight="1"
                app:icon="@drawable/ic_playlist_plus"
                style="@style/Widget.Material3.Button.TonalButton.Icon" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
